Changes vertical size and spacing of main content Changes row and column gap for main-content grid and fixes vertical size of main-content grid.

--- a/styles.css
+++ b/styles.css
@@ -206,8 +206,9 @@ p {
 
     display: grid;
     grid-template-columns: 1fr minmax(280px, 30%);
-    grid-template-rows: 360px minmax(250px, 1fr);
-    gap: 15px;
+    grid-template-rows: 360px minmax(250px, 280px);
+    row-gap: 30px;
+    column-gap: 20px;
 
     background-color: rgba(176, 196, 222, 0.499);
     grid-area: 2 / 2 / 3 / 3;
